@@ -81,7 +81,10 @@ WEBLOGIC_CLASSPATH := \
 
 MOD_CLASSPATH := $(WEBLOGIC_CLASSPATH)
 
-EJBC_CLASSPATH = $(WEBLOGIC_CLASSPATH) $(PROJ_CLASSPATH)
+# OTHER_EJBC_CLASSPATH goes first, allowing WebLogic service pack JAR files
+# to be inserted first.
+
+EJBC_CLASSPATH = $(OTHER_EJBC_CLASSPATH) $(WEBLOGIC_CLASSPATH) $(PROJ_CLASSPATH)
 
 FINAL_EJBC_OPT := $(strip $(LOCAL_EJBC_OPT) $(EJBC_OPT))
 
