@@ -1,3 +1,7 @@
+* Jun 15 2001 hship
+
+[433501] WebLogic.war and service packs
+
 * Jun 14 2001 hship
 
 Minor output changes during builds, including, display the
